k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sweater
  labels:
    app.kubernetes.io/part-of: sweater
